# ostep-homework

13/: CMakeLists.txt  memory-user.c
14/: 1-null.c  4-malloc.c  5-array.c  6-array.c  CMakeLists.txt  p4_valgrind.out  p5_valgrind.out  p6_valgrind.out
cpu-api/: 1.c  2.c  3.c  4.c  5.c  7.c  CMakeLists.txt  p1.out  p2.txt  p4.out  p5.out  p7.out
cpu-intro/: ans6.txt  ans7.txt
cpu-sched/: 1FIFO.out  1SJF.out  2FIFO-2.out  2FIFO.out  2SJF-2.out  2SJF.out
cpu-sched-multi/: 5.out  6.out  7-1-100.out  7-1-50.out  7-2-100.out  7-2-50.out  7-3-100.out  7-3-50.out  8.out
